--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Is Your Birthday Is Lucky</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Is Your Lucky Birthday</title>
 </head>
+
 <body>
-    
+    <h1>Is Your Birthday Lucky??? 🤔 </h1>
+
+    <div class="container">
+        <label for="birth-date">Enter your birth date</label>
+        <input type="date" id="birth-date">
+
+        <label for="lucky-number">Your lucky number please</label>
+        <input type="number" name="" id="lucky-number">
+        <button id="check-button">Check the Result</button>
+        <p id="result" style="font-size: x-large; text-align: center;"></p>
+    </div>
+
+       <footer class="footer">
+          <div class="footer-header">social media presence</div>
+          <ul class="social-links list-non-bullet">
+              <li class="list-item-inline">
+                  <a class="link1" href="https://github.com/sagar455" target="_blank">
+                      github
+                  </a>
+              </li>
+              <li class="list-item-inline">
+                  <a class="link1" href="https://twitter.com/SagarKumar305" target="_blank">
+                      twitter
+                  </a>
+              </li>
+              <li class="list-item-inline">
+                  <a class="link1" href="https://www.linkedin.com/in/sagar-6863961b0/" target="_blank">
+                      linkedin
+                  </a>
+              </li>
+              
+          </ul>
+      </footer>
+  
+    <script src="./script.js"></script>
+
 </body>
+
+
 </html>
